fix(calendar): adds fixes to calendar-based implementation
